package Stonk.rest;

import org.springframework.boot.SpringApplication;
import org.springframework.boot.autoconfigure.SpringBootApplication;

@SpringBootApplication
public class StonkRestApplication {

	public static void main(String[] args) {
		SpringApplication.run(StonkRestApplication.class, args);
	}

}
